--- a/Website Application/WebApplication/WebApplication/Content/bootstrap-grid.css
+++ b/Website Application/WebApplication/WebApplication/Content/bootstrap-grid.css
@@ -20,7 +20,7 @@ html {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto;
+  margin-left: 500px;
 }
 
 @media (min-width: 576px) {
@@ -66,7 +66,6 @@ html {
 
 .no-gutters {
   margin-right: 0;
-  margin-left: 0;
 }
 
 .no-gutters > .col,
